--- a/package.json
+++ b/package.json
@@ -4,41 +4,42 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "cross-env NEXT_PRIVATE_TURBOPACK=false next dev",
+    "dev": "cross-env NEXT_PRIVATE_TURBOPACK=false node https-dev.cjs",
+    "dev-http": "cross-env NEXT_PRIVATE_TURBOPACK=false next dev",
     "build": "next build",
     "start": "next start",
     "lint": "eslint"
   },
   "dependencies": {
-    "axios": "^1.13.1",
+    "axios": "^1.13.2",
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.19",
     "dotenv": "^17.2.3",
-    "google-auth-library": "^10.4.2",
+    "google-auth-library": "^10.5.0",
     "google-spreadsheet": "^5.0.2",
     "googleapis": "^164.1.0",
-    "ky": "^1.13.0",
+    "ky": "^1.14.0",
     "lucide-react": "^0.548.0",
-    "puppeteer": "^24.28.0",
+    "puppeteer": "^24.29.1",
     "react": "^19.2.0",
-    "react-datepicker": "^8.8.0",
+    "react-datepicker": "^8.9.0",
     "react-dom": "^19.2.0",
     "react-icons": "^5.5.0",
-    "react-window": "^1.8.9"
+    "react-window": "^1.8.11"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4",
+    "@tailwindcss/postcss": "^4.1.17",
     "@types/google-spreadsheet": "^3.3.2",
-    "@types/node": "^20",
-    "@types/react": "^19.2.2",
-    "@types/react-dom": "^19.2.2",
+    "@types/node": "^20.19.25",
+    "@types/react": "^19.2.4",
+    "@types/react-dom": "^19.2.3",
     "@types/react-window": "^1.8.8",
     "concurrently": "^9.2.1",
     "cross-env": "^10.1.0",
-    "eslint": "^9",
+    "eslint": "^9.39.1",
     "eslint-config-next": "16.0.0",
     "next": "16.0.1",
-    "tailwindcss": "^4",
-    "typescript": "^5"
+    "tailwindcss": "^4.1.17",
+    "typescript": "^5.9.3"
   }
 }
